# internal/apiserver/routes.go
@@ -80,10 +80,12 @@ var routes = []*oapispec.Route{
 	postTokenPool,
 	getTokenPools,
 	getTokenPoolsByType,
+	getTokenPoolByNameOrID,
 	getTokenPoolByName,
 	getTokenAccounts,
 	getTokenAccountsByPool,
 	getTokenTransfers,
+	getTokenTransfersByID,
 	getTokenTransfersByPool,
 	postTokenMint,
 	postTokenBurn,
